session_9/homework8_2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework2
  namespace: studybuddies
spec:
  replicas: 2
  selector:
    matchLabels:
      app: homework2
  template:
    metadata:
      labels:
        app: homework2
    spec:
      containers:
      - name: echo
        image: hashicorp/http-echo
        args:
          - "-text=Hallöchen from your homework pod!"
          - "-listen=:8080"
        ports:
          - containerPort: 8080
