session_9/homework8_2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework-ingress
  namespace: studybuddies
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: homework.yourcooldomain.com                 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homework-service
            port:
              number: 80
